# vllm-llama-canon

./: .gitignore  README.md  pyproject.toml  test_canon_parity.py  test_canon_vllm.py
vllm_canon/: __init__.py  canon_layer.py
vllm_llama_canon/: __init__.py  modeling_llama_canon.py
