[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-llama-canon"
version = "0.1.0"
description = "vLLM plugin: out-of-tree registration of LlamaCanonForCausalLM (canon layers from PhysicsLM4)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Weiliang Zhao", email = "weiliang@cs.columbia.edu" },
]
keywords = ["vllm", "llm", "canon", "physicslm4", "inference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "vllm>=0.15,<0.17",
  "torch>=2.5",
]

[project.urls]
Homepage = "https://github.com/Zhaoweiliang/vllm-llama-canon"
Issues = "https://github.com/Zhaoweiliang/vllm-llama-canon/issues"
Source = "https://github.com/Zhaoweiliang/vllm-llama-canon"

[project.entry-points."vllm.general_plugins"]
register_llama_canon = "vllm_llama_canon:register"

[tool.setuptools.packages.find]
where = ["."]
include = ["vllm_llama_canon*"]
